syntax = "proto3";
package th2;

import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "com.exactpro.th2.hand.grpc";

// The RH service definition.
service HandBase {
  // Sends a query
  rpc getRhInfo (google.protobuf.Empty) returns (RhInfo) {}
}

// The response message
message BaseRhResponse {
  int32 scriptResult = 1;
  string errorMessage = 2;
  repeated string textOut = 3;
  string sessionId = 4;
}

message RhInfo {
  string sessionId = 1;
  string userBrowser = 2;
}

    
